force-app/main/default/objects/Explore_Customer_Variety_Name__c/Explore_Customer_Variety_Name__c.object-meta.xml
<CustomObject>
    <description>This will be used for GDM Explore to identify the name of a Variety that should appear when a customer scans</description>
    <label>Explore Customer Variety Name</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Explore Customer Variety Name Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Explore Customer Variety Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>