force-app/main/default/objects/Explore_Customer_Variety_Name__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <inlineHelpText>This is the Name that the customer will see for the selected Variety</inlineHelpText>
    <label>Customer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>