force-app/main/default/objects/Explore_Customer_Variety_Name__c/fields/SiteUser__c.field-meta.xml
<CustomField>
    <fullName>SiteUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Siteuser who created/edited this Customer Variety Name in Access.</description>
    <label>SiteUser</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipLabel>Explore Customer Variety Names</relationshipLabel>
    <relationshipName>Explore_Customer_Variety_Names</relationshipName>
    <type>Lookup</type>
</CustomField>