force-app/main/default/objects/Explore_Customer_Variety_Name__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Explore Customer Variety Names</relationshipLabel>
    <relationshipName>Explore_Customer_Variety_Names</relationshipName>
    <type>Lookup</type>
</CustomField>