force-app/main/default/objects/Explore_Customer_Variety_Name__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Name__c</columns>
    <columns>Variety__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>